@@ -1,7 +1,8 @@
 Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 
 version 0.80cvs:
-	* Ninja
+	Bug Fixes:
+	* The firefox browser option now works with firefox 0.9
 
 version 0.79 (06/24/2004):
 	New Features:
